--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -96,9 +96,9 @@ jobs:
       - uses: actions/checkout@v4
       - uses: vmactions/dragonflybsd-vm@v1
         with:
+          usesh: true
           prepare: |
             pkg install -y bash ninja meson pkgconf pcre2 perl5
-            chsh -s /usr/local/bin/bash
           run: |
             set -e
             meson setup "${{github.workspace}}/build" -Dwarning_level=3
@@ -111,6 +111,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: vmactions/freebsd-vm@v1
         with:
+          usesh: true
           prepare: |
             pkg install -y autoconf automake autotools libtool m4 pkgconf \
               ninja meson cmake scons-py39 pcre2 perl5 \
@@ -133,8 +134,9 @@ jobs:
       - uses: actions/checkout@v4
       - uses: vmactions/netbsd-vm@v1
         with:
+          #usesh: true
           prepare: |
-            pkg_add cmake ninja pkgconf pcre2 perl \
+            pkg_add dash cmake ninja pkgconf pcre2 perl \
               gnutls libressl mbedtls nettle nss wolfssl \
               cyrus-sasl mit-krb5 libdbi openldap-client \
               mariadb-client postgresql16-client \
@@ -153,6 +155,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: vmactions/openbsd-vm@v1
         with:
+          usesh: true
           prepare: |
             pkg_add ninja meson pkgconf pcre2 \
               gnutls mbedtls libnettle nss \
@@ -175,6 +178,7 @@ jobs:
 #      - uses: actions/checkout@v4
 #      - uses: vmactions/solaris-vm@v1
 #        with:
+#          usesh: true
 #          prepare: |
 #            pkgutil -y -i cmake gcc5core gmake pkgconfig perl libpcre2_dev
 #          run: |
