[ci] add missing intermediate dep for Cygwin
gcc or some tool underneath appears to require libintl-devel package

--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -211,6 +211,7 @@ jobs:
             libmariadb-devel libpq-devel
             libmaxminddb-devel libunwind-devel lua-devel lua5.1-devel
             libxml2-devel libuuid-devel libsqlite3-devel
+            libintl-devel
       - name: Update
         shell: powershell
         run: |
