--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -28,7 +28,7 @@ option(WITH_NETTLE "with Nettle-support [default: off]")
 option(WITH_PCRE2 "with regex support [default: on]" ON)
 option(WITH_PCRE "with regex support [default: off]")
 option(WITH_WEBDAV_PROPS "with property-support for mod_webdav [default: off]")
-option(WITH_WEBDAV_LOCKS "locks in webdav [default: off]")
+option(WITH_WEBDAV_LOCKS "locks in webdav (obsolete flag; ignored) [default: off]")
 option(WITH_BROTLI "with brotli-support for mod_deflate [default: off]")
 option(WITH_BZIP "with bzip2-support for mod_deflate [default: off]")
 option(WITH_ZLIB "with deflate-support for mod_deflate [default: on]" ON)
@@ -97,10 +97,6 @@ endif()
 if(WITH_WEBDAV_PROPS)
 	set(WITH_XML 1)
 	set(WITH_SQLITE3 1)
-endif()
-
-if(WITH_WEBDAV_LOCKS)
-	set(WITH_UUID 1)
 endif()
 
 check_include_files(sys/inotify.h HAVE_SYS_INOTIFY_H)
@@ -679,20 +675,6 @@ else()
 	unset(HAVE_SQLITE3)
 endif()
 
-if(WITH_UUID)
-	check_include_files(uuid/uuid.h HAVE_UUID_UUID_H)
-	check_library_exists(uuid uuid_generate "" NEED_LIBUUID)
-	if(NOT NEED_LIBUUID)
-		check_function_exists(uuid_generate HAVE_LIBUUID)
-	else()
-		set(HAVE_LIBUUID 1)
-	endif()
-else()
-	unset(HAVE_UUID_UUID_H)
-	unset(NEED_LIBUUID)
-	unset(HAVE_LIBUUID)
-endif()
-
 if(WITH_XXHASH)
 	check_include_files(xxhash.h HAVE_XXHASH_H)
 	check_library_exists(xxhash XXH_versionNumber "" HAVE_XXHASH)
@@ -1073,11 +1055,6 @@ if(HAVE_SQLITE3_H)
 endif()
 if(HAVE_LIBXML_H)
 	target_link_libraries(mod_webdav ${XML2_LDFLAGS})
-endif()
-if(HAVE_UUID_UUID_H)
-	if(NEED_LIBUUID)
-		set(L_MOD_WEBDAV ${L_MOD_WEBDAV} uuid)
-	endif()
 endif()
 
 target_link_libraries(mod_webdav ${L_MOD_WEBDAV})
