--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -88,8 +88,7 @@ jobs:
       - name: Compile and Test
         run: |
           set -e
-          # TODO: figure out why krb5 libpq sasl not found by build
-          export NO_KRB5=1 NO_PGSQL=1 NO_SASL=1 NO_UNWIND=1
+          export NO_UNWIND=1
           cd "${{github.workspace}}" && scripts/ci-build.sh meson
 
   DragonflyBSD:
