[ci] limit github ci to specific branches
(avoid full CI builds for every push to every development branch)

rename pr.yml to ci.yml to follow common convention

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,6 +1,14 @@
-name: On PRs
+name: CI
 
-on: [push, pull_request]
+on:
+  pull_request:
+    branches:
+      - master
+  push:
+    branches:
+      - ci
+    tags:
+      - lighttpd-*
 
 concurrency:
   group: ${{github.workflow}}-${{github.head_ref}}
