[cmake] fix some typos in pcre2 detection
(thx birdofpreyru)

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -546,8 +546,8 @@ if(WITH_PCRE2)
 		set(HAVE_PCRE 1)
 	else()
 		if(NOT WIN32)
-			check_include_files(pcre2.h HAVE_PCRE_H)
-			check_library_exists(pcre2-8 pcre_match "" HAVE_PCRE)
+			check_include_files(pcre2.h HAVE_PCRE2_H)
+			check_library_exists(pcre2-8 pcre2_match_8 "" HAVE_PCRE)
 			set(PCRE_LDFLAGS -lpcre2-8)
 		else()
 			find_path(PCRE_INCLUDE_DIR pcre2.h)
@@ -561,7 +561,7 @@ if(WITH_PCRE2)
 				set(CMAKE_REQUIRED_INCLUDES ${PCRE_INCLUDE_DIR})
 				set(CMAKE_REQUIRED_LIBRARIES ${PCRE_LIBRARY})
 				check_include_files(pcre2.h HAVE_PCRE2_H)
-				check_library_exists(pcre2-8 pcre_match "" HAVE_PCRE)
+				check_library_exists(pcre2-8 pcre2_match_8 "" HAVE_PCRE)
 				set(CMAKE_REQUIRED_INCLUDES)
 				set(CMAKE_REQUIRED_LIBRARIES)
 				include_directories(${PCRE_INCLUDE_DIR})
