[autotools] add pkgconf test for libdbi

--- a/configure.ac
+++ b/configure.ac
@@ -328,16 +328,18 @@ if test "$WITH_DBI" != no; then
     DBI_CFLAGS="-I$WITH_DBI/include"
     DBI_LIBS="-L$WITH_DBI/lib -ldbi"
   else
-    AC_CHECK_HEADERS([dbi/dbi.h],
-      [AC_CHECK_LIB([dbi], [dbi_version],
-        [
-          DBI_CFLAGS=
-          DBI_LIBS="-ldbi"
-        ],
-        [AC_MSG_ERROR([LibDBI not found])]
-      )],
-      [AC_MSG_ERROR([LibDBI header not found])]
-    )
+    PKG_CHECK_MODULES([DBI], [dbi], [], [
+      AC_CHECK_HEADERS([dbi/dbi.h],
+        [AC_CHECK_LIB([dbi], [dbi_version],
+          [
+            DBI_CFLAGS=
+            DBI_LIBS="-ldbi"
+          ],
+          [AC_MSG_ERROR([LibDBI not found])]
+        )],
+        [AC_MSG_ERROR([LibDBI header not found])]
+      )
+    ])
   fi
 
   AC_DEFINE([HAVE_DBI], [1], [LibDBI support])
