[doc] simplify doc/config/lighttpd.conf entry

--- a/doc/config/lighttpd.annotated.conf
+++ b/doc/config/lighttpd.annotated.conf
@@ -1,6 +1,6 @@
 #######################################################################
 ##
-## /etc/lighttpd/lighttpd.conf
+## included by /etc/lighttpd/lighttpd.conf
 ##
 ## check /etc/lighttpd/conf.d/*.conf for the configuration of modules.
 ##
@@ -85,7 +85,7 @@ include conf_dir + "/modules.conf"
 ##  Basic Configuration
 ## ---------------------
 ##
-server.port = 80
+#server.port = 80
 
 ##
 ## bind to a specific IP
@@ -339,15 +339,6 @@ index-file.names += (
 url.access-deny             = ( "~", ".inc" )
 
 ##
-## disable range requests for pdf files
-## workaround for a bug in the Acrobat Reader plugin.
-## (ancient; should no longer be needed)
-##
-#$HTTP["url"] =~ "\.pdf$" {
-#  server.range-requests = "disable"
-#}
-
-##
 ## url handling modules (rewrite, redirect)
 ##
 #url.rewrite                = ( "^/$"             => "/server-status" )
@@ -396,16 +387,6 @@ include conf_dir + "/conf.d/mime.conf"
 include conf_dir + "/conf.d/dirlisting.conf"
 
 ##
-## Should lighttpd follow symlinks?
-## default: "enable"
-#server.follow-symlink = "enable"
-
-##
-## force all filenames to be lowercase?
-##
-#server.force-lowercase-filenames = "disable"
-
-##
 ## defaults to /var/tmp as we assume it is a local harddisk
 ## default: "/var/tmp"
 #server.upload-dirs = ( "/var/tmp" )
@@ -431,14 +412,10 @@ include conf_dir + "/conf.d/dirlisting.conf"
 ##   # intermediate certificates, as provided by the certificate issuer.
 ##   # If both privkey and cert are in same file, specify only ssl.pemfile.
 ##
-##   # Check your cipher list with: openssl ciphers -v '...'
-##   # (use single quotes with: openssl ciphers -v '...'
-##   #  as your shell won't like ! in double quotes)
-##   #ssl.openssl.ssl-conf-cmd +=
-##   #  ("CipherString" => "EECDH+AESGCM:CHACHA20:!PSK:!DHE")   # default
-##
-##   # (recommended to accept only TLSv1.2 and TLSv1.3)
-##   #ssl.openssl.ssl-conf-cmd += ("MinProtocol" => "TLSv1.2")  # default
+##   # lighttpd TLS defaults are strict and compatible with modern clients.
+##   # If your organization requires use of system-managed TLS defaults to
+##   # override lighttpd TLS defaults, use "CipherString" => "PROFILE=SYSTEM"
+##   #ssl.openssl.ssl-conf-cmd += ("CipherString" => "PROFILE=SYSTEM")
 ##
 ##   $SERVER["socket"] == "*:443" {
 ##     ssl.engine  = "enable"
