--- a/doc/config/modules.conf
+++ b/doc/config/modules.conf
@@ -13,7 +13,7 @@
 ##   server.compat-module-load = "disable"
 ##
 ## lighttpd provides many modules, and not all are listed below.  Please see:
-## https://redmine.lighttpd.net/projects/lighttpd/wiki/Docs_ConfigurationOptions
+## https://wiki.lighttpd.net/Docs_ConfigurationOptions
 ##
 ## Modules, which are pulled in via conf.d/*.conf
 ##
@@ -39,6 +39,12 @@
 ## modules which complete requests (e.g. mod_redirect, mod_rewrite),
 ## and which, in turn, should be listed before dynamic handlers
 ## (e.g. mod_cgi, mod_fastcgi, mod_proxy, mod_scgi, ...)
+##
+## Regardless of module order, modules operating on connections (e.g. TLS)
+## operate on connections before modules which operate on requests.  (There
+## can be multiple requests per connection.)  Similarly, regardless of module
+## order, mod_rewrite and mod_extforward operate on requests before other
+## request modules.
 ##
 ## DO NOT alphabetize modules.
 ## Alphabetizing may break expected functionality.  See explanation above.
@@ -137,14 +143,15 @@ server.modules = (
 ##
 ## VHost Modules
 ##
-##  Only load ONE of them!
-## ========================
+## options to support many vhosts
+## - none; virtual hosts (vhosts) are natively supported in lighttpd via
+##      lighttpd.conf conditionals $HTTP["host"] == "..." { ... }
+## - mod_evhost
+## - mod_simple_vhost
+## - mod_vhostdb
+##     mod_vhostdb_dbi, mod_vhostdb_ldap, mod_vhostdb_mysql, mod_vhostdb_pgsql
 ##
-
-##
-## You can use conditionals for vhosts aswell.
-## 
-## see https://redmine.lighttpd.net/projects/lighttpd/wiki/Docs_Configuration
+## https://wiki.lighttpd.net/Docs_ConfigurationOptions
 ##
 
 ##
