[doc] use shorter https://wiki.lighttpd.net/ url
and remove trailing whitespace

--- a/doc/config/conf.d/auth.conf
+++ b/doc/config/conf.d/auth.conf
@@ -3,8 +3,7 @@
 ##  Authentication Module
 ## -----------------------
 ##
-## See https://redmine.lighttpd.net/projects/lighttpd/wiki/Docs_ModAuth
-## for more info and many more options.
+## https://wiki.lighttpd.net/mod_auth for more info and many more options.
 ##
 
 server.modules += ( "mod_auth" )
