--- a/doc/config/conf.d/magnet.conf
+++ b/doc/config/conf.d/magnet.conf
@@ -1,22 +1,17 @@
 #######################################################################
 ##
-##  Magnet Module 
-## --------------- 
+##  Magnet Module
+## ---------------
 ##
-## See https://redmine.lighttpd.net/projects/lighttpd/wiki/Docs_ModMagnet
+## https://wiki.lighttpd.net/mod_magnet
 ##
 server.modules += ( "mod_magnet" )
 
-##
-##
-##
-#magnet.attract-raw-url-to = (  )
+#magnet.attract-raw-url-to = ( conf_dir + "/example-url.lua" )
 
-##
-## as an example for that see the mod_magnet docs and
-## http://pixel.global-banlist.de./
-##
-#magnet.attract-physical-path-to = ( conf_dir + "/cleanurl.lua" )
+#magnet.attract-physical-path-to = ( conf_dir + "/example-filepath.lua" )
+
+#magnet.attract-response-to = ( conf_dir + "/example-response.lua" )
 
 ##
 #######################################################################
