[ci] adjust Solaris CI build

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -196,6 +196,7 @@ jobs:
           usesh: true
           copyback: false
           prepare: |
+            pkgutil -U
             pkgutil -y -i cmake gmake pkgconfig perl \
               libpcre2_dev \
               libnettle_dev libgnutls_dev libnss_dev libssl_dev \
